# xiaozhi-esp32

./: .gitignore  .skip-template  cloudbaserc.json  package-lock.json  sdkconfig  sdkconfig.backup  sdkconfig.old  sdkconfig.original
.claude/: settings.local.json
Reference Project/AI-SDK-Android/: .gitignore  build.gradle  gradle.properties  settings.gradle
Reference Project/AI-SDK-Android/FullyCompatibleSDK/: Module.md  build.gradle  dokka-config.gradle
Reference Project/AI-SDK-Android/FullyCompatibleSDK/libs/: AI-SDK-release_1.0.4_.aar
Reference Project/AI-SDK-Android/InspurPadSdk/: AIFoundationKit.kt  Module.md  build.gradle  dokka-config.gradle
Reference Project/AI-SDK-Android/InspurPadSdk/libs/: aiFoundationKit-debug.aar  asrIntelligentDialogue-debug.aar  (+1 more)
Reference Project/AI-SDK-Android/aiFoundationKit/: Module.md  build.gradle
Reference Project/AI-SDK-Android/app/: build.gradle
Reference Project/AI-SDK-Android/asrIntelligentDialogue/: Module.md  build.gradle
Reference Project/AI-SDK-Android/asrTranslation/: Module.md  dokka-config.gradle  proguard-rules.pro
Reference Project/AI-SDK-Android/coolPadSdk/: build.gradle
Reference Project/AI-SDK-Android/customizeSdk/: Module.md  build.gradle  dokka-config.gradle
Reference Project/AI-SDK-Android/deviceAccess/: Module.md  build.gradle  dokka-config.gradle  proguard-rules.pro
Reference Project/AI-SDK-Android/deviceAccess_gatewayProxy/: Module.md  dokka-config.gradle
Reference Project/AI-SDK-Android/lightweightAdaptation/: Module.md  build.gradle  dokka-config.gradle  proguard-rules.pro
Reference Project/AI-SDK-Android/lingXiAgent/: Module.md  dokka-config.gradle
Reference Project/AI-SDK-Android/littleElephantPADLearningMachine/: Module.md  build.gradle  dokka-config.gradle
Reference Project/AI-SDK-Android/ztePadSdk/: build.gradle
Reference Project/AI-SDK-Android/zuoYeBangLearningMachine/: AIFoundationKit.kt  Module.md  build.gradle
Reference Project/xiaodu_asr3602_sota_2025051502/: CLAUDE.md  Mermaid.md  readme.txt
Reference Project/xiaodu_asr3602_sota_2025051502/.claude/: settings.local.json  settings.local.json_kimi
components/ai_sdk/: CMakeLists.txt  CMakeLists.txt.source
components/ai_sdk/include/ai_sdk/: ai_assistant_manager.h  api_config.h  asr_dialogue.h  asr_websocket.h  assist_utils.h  audio_stream.h  device_client.h  gate_way.h  gateway.h  gateway_client.h  http_client.h  report_client.h  types.h
components/ai_sdk/src/: ai_assistant_manager.cc  api_config.cc  asr_dialogue.cc  asr_websocket.cc  assist_utils.cc  device_client.cc  gate_way.cc  gateway.cc  gateway_client.cc  http_client.cc  report_client.cc
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml  main.cc  test_ai_sdk.cpp
main/audio/: audio_codec.h
main/protocols/: ai_sdk_protocol.cc  ai_sdk_protocol.h
(+257 files in other folders)
